# llmanager

./: .env.migrations  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  FRONTEND_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_FRONTEND.md  LICENSE  README.md  alembic.ini  docker-compose.dev.frontend.yml  docker-compose.dev.yml  docker-compose.yml  init_admin.sql  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docker/grafana/provisioning/dashboards/: dashboard.yml  llm_metrics.json
docker/grafana/provisioning/datasources/: datasource.yml  prometheus.yml
docker/prometheus/: prometheus.yml
docs/: API_KEY_MIGRATION.md  PERMISSIONS.md
docs/api/: README.md
frontend/: .eslintrc.cypress.json  FRONTEND_IMPLEMENTATION_PLAN.md  README.md  cypress.config.ts  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.test.json
frontend/.storybook/: main.ts  preview.ts
frontend/cypress/: env.d.ts  tsconfig.json
frontend/cypress/e2e/: auth.cy.ts  metrics.cy.ts  quotas.cy.ts  user-flows.cy.ts
frontend/cypress/support/: commands.ts  e2e.ts  index.d.ts
frontend/scripts/: setup-dev.sh
frontend/src/: middleware.ts
frontend/src/app/: layout.config.ts  layout.tsx  metadata.ts  page.tsx  providers.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/groups/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/metrics/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/components/auth/: auth-guard.tsx  login-form.tsx  register-form.tsx
frontend/src/components/charts/: area-chart.tsx  (+3 more)
frontend/src/lib/: api.ts  llmApi.ts  types.ts
frontend/src/providers/: auth-provider.tsx  query-provider.tsx
frontend/src/services/: group-service.ts  settings-service.ts  user-service.ts
frontend/src/stores/: auth-store.ts  use-app-store.ts
frontend/src/stories/: CHANGELOG.md  NEXT-STEPS.md  README.md  components.mdx  style-guide.mdx
frontend/src/test/: global.d.ts  jest.d.ts  msw-handlers.ts  setupTests.ts  test-data.ts  test-utils.tsx  types.d.ts
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
migrations/: env.py
migrations/versions/: 20250213_init.py  20250213_tenant.py  20250218_api_key_user.py
scripts/: clean_db.sql  create_admin.py  create_user.py  init_db.sql  migrate_api_keys.py  reset_db.sh  setup_dev.sh  verify_setup.py
src/: main.py  schemas.py
src/api/: router.py
src/api/routes/: admin.py  auth.py  llm.py  metrics.py  users.py
src/app/: __init__.py  factory.py  handlers.py  middleware.py  openapi.py  views.py
src/app/openapi/: __init__.py  examples.py  models.py  security.py
src/core/: auth.py  config.py  database.py  exceptions.py  logging.py  middleware.py  permissions.py  redis.py  utils.py
src/models/: system.py  tenant.py
src/services/: model.py  quota.py
src/templates/: home.html
tests/core/: test_permissions.py
(+75 files in other folders)
